--- a/src/css/sass/components/_verticalslider.scss
+++ b/src/css/sass/components/_verticalslider.scss
@@ -72,7 +72,9 @@
             width: 100%;
             height: 40px;
             padding: 12px 8px;
-            @extend %flex-center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-size: 14px;
             color: $mainFColor;
 
@@ -167,7 +169,9 @@
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    @extend %flex-center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
 
                     @media #{$minMed} {
                         justify-content: space-between;
@@ -193,5 +197,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    //align-items: center;
 
 }
