--- a/src/css/sass/components/_verticalslider.scss
+++ b/src/css/sass/components/_verticalslider.scss
@@ -115,6 +115,7 @@
 
 
                 box-shadow: -1px -1px 14px 1px rgba(0, 0, 0, 0.2);
+                border: 1px solid black;
 
                 @media #{$minMed} {
                     width: 100%;
