--- a/src/css/sass/components/_verticalslider.scss
+++ b/src/css/sass/components/_verticalslider.scss
@@ -120,6 +120,7 @@
                 @media #{$minMed} {
                     width: 100%;
                     box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+                    border: none;
 
 
                 }
