PDP page finalize 4.6 update mobile  v

--- a/src/css/sass/components/_banner.scss
+++ b/src/css/sass/components/_banner.scss
@@ -1,9 +1,6 @@
 .banner {
     //use mixin
-    background-image: url(../imgs/hero-img.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    @include bgImg(url(../imgs/hero-img.jpg));
 
     .content-wrapping {
         padding: 51px 0 45px 0;
