--- a/src/css/sass/components/_bestSelling.scss
+++ b/src/css/sass/components/_bestSelling.scss
@@ -65,7 +65,7 @@
 
             @media #{$minMed} {
                 height: 252px;
-                width: 252px;
+                width: 100%;
 
 
             }
