--- a/src/css/sass/pages/_products.scss
+++ b/src/css/sass/pages/_products.scss
@@ -1,3 +1,16 @@
+%namefont {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
+.products {
+    padding: 0;
+
+
+
+}
+
 @import '../components/verticalslider';
 @import '../components/productinfo';
 @import '../components/lipstickslider';
