--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,8 +9,6 @@
 @import './sass/components/logo';
 @import './sass/layout/header';
 @import './sass/pages/breadcrumb';
-@import './sass/pages/products';
-@import './sass/pages/productdetail';
-@import './sass/pages/relateditem';
+@import './sass/pages/pdp';
 @import './sass/pages/home';
 @import './sass/layout/footer';
