--- a/src/css/sass/components/_productinfo.scss
+++ b/src/css/sass/components/_productinfo.scss
@@ -21,6 +21,7 @@
 
         .price {
             font-size: 20px;
+            display: flex;
 
             .price-unit {
                 font-weight: normal;
