--- a/src/css/sass/pages/_breadcrumb.scss
+++ b/src/css/sass/pages/_breadcrumb.scss
@@ -10,16 +10,29 @@
     .breadcrumb {
         &.list {
 
-            padding: 0;
-            margin-bottom: 0;
-            border-radius: 0;
+            // padding: 0;
+            // margin-bottom: 0;
+            // border-radius: 0;
             background-color: transparent;
 
             .list-item {
                 &+.list-item {
+                    padding-left: 2px;
+
+                    @media #{minMed} {
+                        padding-left: 8px;
+
+                    }
+
                     &::before {
                         content: "・";
                         color: $mainBColor;
+                        padding-right: 2px;
+
+                        @media #{$minMed} {
+                            padding-right: 8px;
+
+                        }
                     }
                 }
 
@@ -42,7 +55,7 @@
 }
 
 %fontstyle {
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 600;
     line-height: 2.18;
     letter-spacing: 0;
