PDP page finalize 4.6 update mobile  v1.1

--- a/src/css/sass/pages/_general.scss
+++ b/src/css/sass/pages/_general.scss
@@ -78,7 +78,7 @@ section {
 
             .card-wrapper {
                 height: inherit;
-                margin: 0 0 0 10px;
+                margin: 0 10px 0 0;
 
                 //large
                 @media #{$minMed} {
