--- a/src/css/sass/base/_reset.scss
+++ b/src/css/sass/base/_reset.scss
@@ -116,8 +116,8 @@ input {
 
 .custom-container {
     max-width: 100vw;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
 
     &.s-both {
         padding-left: 0;
@@ -125,9 +125,19 @@ input {
 
     }
 
+    &.s-right {
+        padding-right: 0;
+
+    }
+
     @media #{$minMed} {
         &.s-both {
             padding-left: 60px;
+            padding-right: 60px;
+
+        }
+
+        &.s-right {
             padding-right: 60px;
 
         }
